[metadata]
name = yahoo_panoptes
summary = Network Telemetry And Monitoring
description-file = README.md
description_content_type = text/markdown
author = Network Automation Team @ Oath, Inc.
author-email = network-automation@oath.com
home-page = https://getpanoptes.io
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Other Audience
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python
    Topic :: System :: Networking :: Monitoring
license = Apache 2.0

[options]
# zip_safe = False
# include_package_data = True
install_requires =
    cached-property
    celery
    Cerberus
    configobj
    faulthandler;python_version<"3.3"
    future
    gevent
    influxdb
    ipaddress
    json-schema-validator
    kazoo
    kafka-python==1.3.5
    kombu==4.6.3
    mmh3
    pyparsing
    ratelimitingfilter
    redis
    requests
    yahoo_panoptes_snmp>=0.2.5.121
    yapsy

packages = find:

[options.extras_require]
dev =
    future
    tox
    nose
    nose-cov
    mock
    mockredispy
    requests-mock
    snmpsim
    testfixtures
    zake
    pycodestyle
    pylint<2.0.0

doc_build =
    sphinx<1.6.0
    sphinx_rtd_theme
    guzzle_sphinx_theme
    recommonmark
    pygments

[options.entry_points]
console_scripts =
    panoptes_resource_manager=yahoo_panoptes.resources.manager:start
    panoptes_influxdb_consumer=yahoo_panoptes.consumers.influxdb.consumer:start

[options.packages.find]
exclude =
    setup

[build_sphinx]
source-dir = doc/source
build-dir = build/sphinx/html
all_files = 1

[pep8]
max-line-length = 120
ignore = E722, E126
exclude = migrations

[pycodestyle]
max-line-length = 120
ignore = E722, E126
exclude = migrations
